--- a/docker/alpine/Dockerfile
+++ b/docker/alpine/Dockerfile
@@ -1,4 +1,4 @@
-# Docker-in-Docker Jenkins Slave
+# Docker-in-Docker Fabric Test Container
 #
 # See: https://github.com/litong01/fabric-pilot
 #
@@ -6,7 +6,8 @@ FROM docker:dind
 
 RUN set -eux; \
     apk add --no-cache --update python3 bash \
-    nodejs nodejs-npm py-virtualenv \
+    nodejs nodejs-npm py-virtualenv go curl \
+    && curl -fsSL https://clis.ng.bluemix.net/install/linux | sh \
     && rm -rf /var/cache/apk/*
 
 VOLUME /var/lib/docker
