--- a/docker/alpine/Dockerfile
+++ b/docker/alpine/Dockerfile
@@ -8,6 +8,7 @@ RUN set -eux; \
     apk add --no-cache --update python3 bash \
     nodejs nodejs-npm py-virtualenv go curl \
     && curl -fsSL https://clis.ng.bluemix.net/install/linux | sh \
+    && ln -s /usr/bin/python3 /usr/bin/python \
     && rm -rf /var/cache/apk/*
 
 VOLUME /var/lib/docker
